Update info and fix paddle position jump on game start

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -331,6 +331,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 90vw;
+  justify-content: center;
 }
 
 .project {
@@ -345,10 +346,14 @@ body {
   animation-duration: .5s;
 }
 
-.project:hover {
+.project-container:hover .project{
   opacity: 1;
   animation-name: project-hover-in;
   animation-duration: .5s;
+}
+
+.project-container:hover .project-live-container {
+  display: none;
 }
 
 .project:hover .project-title {
@@ -425,6 +430,34 @@ body {
   width: 390px;
   height: 300px;
   background-image: linear-gradient(to bottom right, white,rgba(0, 0, 0, 0.144));
+}
+
+.project-live-container {
+  display: flex;
+  align-items: center;
+  background-color: #f00000;
+  border-radius: 5px;
+  padding: 1px;
+  width: fit-content;
+  margin: 15px;
+  margin-left: auto;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+}
+
+.project-live {
+  color: white;
+  font-weight: bold;
+  font-family: "Raleway";
+  src: url("./fonts/Raleway-Regular.ttf");
+  letter-spacing: 2px;
+  font-size: 12px;
+}
+
+.project-live-icon {
+  height: 20px;
+  width: auto;
 }
 
 .project-title {
